--- a/main.html
+++ b/main.html
@@ -10,6 +10,50 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form method="post">
+		<label for="name">Name</label>
+		<input type="text" id="#name" placeholder="Enter Name">
+		<br>
+		<br>
+		<label for="email">Email*</label>
+		<input type="email" placeholder="example@gmail.com" id="#email" required>
+		<br>
+		<br>
+		<label for="gender">Gender*</label>
+		<input type="radio" name="gender" required>
+		<label for="male">Male</label>
+		<input type="radio" name="gender" required>
+		<label for="female">Female</label>
+		<input type="radio" name="gender" required>
+		<label for="others">Others</label>
+		<br>
+		<br>
+		<label for="brands">Car Brands</label>
+		<select name="cars" id="#cars">
+			<option>BMW</option>
+			<option>Audi</option>
+			<option>Mercedez</option>
+		</select>
+		<br>
+		<br>
+		<label for="carage">Car Age*</label>
+		<input type="number" id="#carage" required>
+		<br>
+		<br>
+		<label for="dateofpurchase">Date of Purchase(dob)*</label>
+		<input type="date" required id="#dob">
+		<br>
+		<br>
+		<label for="password">Password*</label>
+		<input type="password" id="#password" placeholder="Enter password" required>
+		<br>
+		<br>
+		<button type="submit">Submit</button>
+
+
+		
+		
+	</form>
 
 </body>
 
