--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 		<label for="others">Others</label>
 		<br>
 		<br>
-		<label for="brands">Car Brands</label>
+		<label for="cars">Car Brands</label>
 		<select id="cars">
 			<option>BMW</option>
 			<option>Audi</option>
@@ -36,11 +36,11 @@
 		</select>
 		<br>
 		<br>
-		<label for="carofage">Car Age*</label>
+		<label for="carage">Car Age*</label>
 		<input type="number" id="carage" required>
 		<br>
 		<br>
-		<label for="dateofpurchase">Date of Purchase(dob)*</label>
+		<label for="dob">Date of Purchase(dob)*</label>
 		<input type="date" required id="dob">
 		<br>
 		<br>
