--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		<br>
 		<br>
 		<label for="email">Email*</label>
-		<input type="email" placeholder="example@gmail.com" id="email" required>
+		<input type="email" placeholder="example@gmail.com" id="#email" required>
 		<br>
 		<br>
 		<label for="gender">Gender*</label>
@@ -36,11 +36,11 @@
 		</select>
 		<br>
 		<br>
-		<label for="carage">Car Age*</label>
+		<label for="carofage">Car Age*</label>
 		<input type="number" id="carage" required>
 		<br>
 		<br>
-		<label for="dob">Date of Purchase(dob)*</label>
+		<label for="date">Date of Purchase(dob)*</label>
 		<input type="date" required id="dob">
 		<br>
 		<br>
