--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		<br>
 		<br>
 		<label for="email">Email*</label>
-		<input type="email" placeholder="example@gmail.com" id="#email" required>
+		<input type="email" placeholder="example@gmail.com" id="email" required>
 		<br>
 		<br>
 		<label for="gender">Gender*</label>
@@ -29,15 +29,15 @@
 		<br>
 		<br>
 		<label for="cars">Car Brands</label>
-		<select id="cars">
+		<select id="#cars">
 			<option>BMW</option>
 			<option>Audi</option>
 			<option>Mercedez</option>
 		</select>
 		<br>
 		<br>
-		<label for="carofage">Car Age*</label>
-		<input type="number" id="carage" required>
+		<label for="carage">Car Age*</label>
+		<input type="number" id="#carage" required>
 		<br>
 		<br>
 		<label for="date">Date of Purchase(dob)*</label>
@@ -45,7 +45,7 @@
 		<br>
 		<br>
 		<label for="password">Password*</label>
-		<input type="password" id="password" placeholder="Enter password" required>
+		<input type="password" id="#password" placeholder="Enter password" required>
 		<br>
 		<br>
 		<button type="submit">Submit</button>
