--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
 		<br>
 		<br>
 		<label for="cars">Car Brands</label>
-		<select id="#cars">
+		<select id="cars">
 			<option>BMW</option>
 			<option>Audi</option>
 			<option>Mercedez</option>
@@ -37,15 +37,15 @@
 		<br>
 		<br>
 		<label for="carage">Car Age*</label>
-		<input type="number" id="#carage" required>
+		<input type="number" id="carage" required>
 		<br>
 		<br>
-		<label for="date">Date of Purchase(dob)*</label>
-		<input type="date" required id="dob">
+		<label for="dop">Date of Purchase(dob)*</label>
+		<input type="date" required id="dop">
 		<br>
 		<br>
 		<label for="password">Password*</label>
-		<input type="password" id="#password" placeholder="Enter password" required>
+		<input type="password" id="password" placeholder="Enter password" required>
 		<br>
 		<br>
 		<button type="submit">Submit</button>
